# aws-dynamodb-examples

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  README.md  SECURITY.md  n-README.md  pom.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  issue-template.md  workshop-feedback.md
.github/workflows/: main.yaml
AWSDynamoDBJavaSDKInjectErrorsAndLatencies/: AwsCredentials.properties
Cloudformation/: Process_new_items_dynamodb_steams.yml  README.md
Cloudformation/GlobalTables/: GlobalTable_OnDemand.json  GlobalTable_OnDemand.yml
DynamoDB-SDK-Examples/: CONTRIBUTING.md  README.md
DynamoDB-SDK-Examples/docker/: docker-compose.yml
DynamoDB-SDK-Examples/dotnet/: DotnetSamples.csproj  README.md
DynamoDB-SDK-Examples/golang/: README.md
DynamoDB-SDK-Examples/java/: README.md
DynamoDB-SDK-Examples/node.js/: README.md
DynamoDB-SDK-Examples/python/: README.md
DynamoDB-SDK-Examples/rust/: .gitignore  README.md
DynamoDB-SDK-Examples/rust/working_with_indexes/: Cargo.toml  README.md
DynamoDB-SDK-Examples/rust/working_with_indexes/src/create-index/: main.rs
DynamoDB-SDK-Examples/rust/working_with_indexes/src/delete-index/: main.rs
DynamoDB-SDK-Examples/rust/working_with_items/: Cargo.toml
DynamoDB-SDK-Examples/rust/working_with_items/src/batch-get/: main.rs
DynamoDB-SDK-Examples/rust/working_with_items/src/conditional-put-item/: main.rs
DynamoDB-SDK-Examples/rust/working_with_items/src/conditional-update-item/: main.rs
DynamoDB-SDK-Examples/rust/working_with_items/src/delete-item/: main.rs
DynamoDB-SDK-Examples/rust/working_with_items/src/get-item/: main.rs
DynamoDB-SDK-Examples/rust/working_with_items/src/put-item/: main.rs
DynamoDB-SDK-Examples/rust/working_with_items/src/update-item/: main.rs
DynamoDB-SDK-Examples/rust/working_with_streams/: Cargo.toml
DynamoDB-SDK-Examples/rust/working_with_tables/: Cargo.toml
DynamoDB-SDK-Examples/rust/working_with_tables/src/create-table-on-demand/: main.rs
DynamoDB-SDK-Examples/rust/working_with_tables/src/delete-table/: main.rs
DynamoDB-SDK-Examples/rust/working_with_tables/src/describe-table/: main.rs
DynamoDBCustomMetrics/dynamodb_custom_metrics/: dynamodb_custom_metrics_stack.py
DynamoDBCustomMetrics/lambda/: lambda_function.py
DynamoDBIAMPolicies/: AmazonDynamoDB+DAXDataFullAccess.json  AmazonDynamoDBAcceleratorDataFullAccess.json  AmazonDynamoDBDataFullAccess.json  AmazonDynamoDBStreamsOnlyAccess.json  README.md
LoadS3toDynamoDB/: README.md
PrintDistinctPKs/RandomLoader/: load_random_data.py
SchemaDesign/WriteSharding/: README.md
archived/: README.md
archived/LoadS3toDynamoDB/: load.py
cloudformation/: README.md
cloudformation/global_tables/: GlobalTable_OnDemand.yml  GlobalTable_Provisioned.yml
examples/: README.md
examples/Bedrock/: README.md
examples/DRESN/: README.md
examples/NERDS/: README.md
examples/SDK/: Operations.md  README.md
examples/SDK/rust/data_plane/working_with_queries/: Cargo.toml  README.md
examples/SDK/rust/data_plane/working_with_queries/src/prepare-query-data/: main.rs
examples/SDK/rust/data_plane/working_with_queries/src/query-scan-filter/: main.rs
examples/SDK/rust/working_with_scans/: Cargo.toml  README.md
examples/tester/: README.md  config.json  package.json
global-serverless/: README.md  app.py  requirements.txt  s3.sh  sample-data.json  test.py
global-serverless/web/: globalflix.html  globalflix.js  index.css  index.html  index.js  player.html  player.js
infrastructure_as_code/: README.md
infrastructure_as_code/cdk/: README.md
infrastructure_as_code/cloudformation/: README.md
infrastructure_as_code/security/: README.md
inject-errors-latencies/: log4j.properties
nosqlworkbenchscript/: README.md  create-workbench-import.js
relational-migration/: README.md  app.py  mysql_s3.py  setenv.sh  setup.sh
relational-migration/chalicelib/: __init__.py  dynamodb_calls.py  mysql_calls.py
relational-migration/load/: load.py
relational-migration/source-tables/: create_tables.sql
relational-migration/webapp/: generate.js  index.css  index.js  sql-samples.js
schema_design/: README.md
scripts/: README.md
scripts/PrintDistinctPKs/: README.md
scripts/docker/: README.md  docker-compose.yml
scripts/dynamodb-local-bulk-loader/: .gitignore  README.md  RESULTS.md  async_loader_cli.py  generate_csv.py  pyproject.toml  threaded_loader_cli.py
scripts/dynamodb-local-bulk-loader/docs/: ASYNC_LOADER_README.md  THREADED_LOADER_README.md
scripts/dynamodb-local-bulk-loader/src/: __init__.py  async_loader.py  csv_generator.py  error_handler.py  logging_config.py  models.py  retry_handler.py  threaded_loader.py
scripts/dynamodb-local-bulk-loader/tests/: __init__.py
scripts/dynamodb-local-bulk-loader/tests/integration/: __init__.py  test_async_loader_e2e.py
scripts/dynamodb-local-bulk-loader/tests/property/: __init__.py  test_async_loader.py  test_csv_generator.py  test_data_models.py  test_error_isolation.py  test_input_validation.py  test_retry_logic.py  test_threaded_loader.py
scripts/dynamodb-local-bulk-loader/tests/unit/: __init__.py  test_async_loader.py  test_csv_generator.py  test_error_handler.py  test_threaded_loader.py  test_validation.py
scripts/nosqlworkbenchscript/: README.md  create-workbench-import.js
workshops/: README.md
workshops/cost-template/: DynamoDB+Cost+Template.xlsx  README.md
workshops/global-serverless/: README.md  app.py  requirements-dev.txt  requirements.txt  s3.sh
workshops/ledger/: .gitignore  README.md  daily_totals.py  find_all_pks.py  populate.py  query0.sh  query1.sh
workshops/modernizer/: README.md  SELF_HOSTED_README.md  entity_relationships_diagram.md  modernizer-db.yaml  modernizer-db_yaml.README.md
workshops/modernizr/: README.md  entity_relationships_diagram.md
workshops/relational-migration/: README.md  app.py  custom.sql  migrate.sh  migrate2.sh  mysql_desc_ddb.py  mysql_s3.py  requirements.txt  setenv.sh  setup.sh  setup_tables.sh  test_delete.py  test_desc.py  test_get.py  test_query.py  test_scan.py  test_sql.py  test_tables.py  test_update.py  (+2 more)
(+1007 files in other folders)
