[package]
name = "working_with_items"
version = "0.1.0"
authors = ["Erben Mo <moerben@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynamodb = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.4-alpha", package = "aws-sdk-dynamodb" }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "put-item"
path = "src/put-item/main.rs"

[[bin]]
name = "get-item"
path = "src/get-item/main.rs"

[[bin]]
name = "update-item"
path = "src/update-item/main.rs"

[[bin]]
name = "delete-item"
path = "src/delete-item/main.rs"
