[package]
name = "working_with_tables"
version = "0.1.0"
authors = ["Erben Mo <moerben@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynamodb = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.4-alpha", package = "aws-sdk-dynamodb" }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "list-tables"
path = "src/list-tables/main.rs"

[[bin]]
name = "create-table-on-demand"
path = "src/create-table-on-demand/main.rs"

[[bin]]
name = "describe-table"
path = "src/describe-table/main.rs"

[[bin]]
name = "delete-table"
path = "src/delete-table/main.rs"
